# stateful-dataflows-examples

./: .gitignore  Makefile  README.MD  connectors.md
.github/workflows/: check.yml  ci.yml  nightly  nightly.yml
callouts/clickhouse-callout/: README.MD  dataflow.yaml
callouts/http-callout/: dataflow.yaml
dataflow/split-sentence/: README.MD  dataflow.yaml
dataflows/: .gitignore
dataflows-cloud/helsinki-transit/: README.md  dataflow.yaml
dataflows-composed/key-processing/: dataflow.yaml
dataflows-composed/mask-user-info/: .gitignore  Makefile  README.MD  dataflow.yaml
dataflows-composed/split-sentence/: Makefile  README.MD  dataflow.yaml
dataflows-composed/word-probe/: .gitignore  README.MD  dataflow.yaml
dataflows-inline/bank-processing/: Makefile  README.MD  dataflow.yaml
dataflows-inline/car-processing/: Dockerfile  README.MD  dataflow.yaml  run.sh
dataflows-inline/hackernews-notify/: README.MD  dataflow.yaml
dataflows-inline/hackernews-openai/: .gitignore  README.MD  dataflow.yaml
dataflows-inline/helsinki-transit/: README.md  dataflow.yaml
dataflows-inline/http-callout/: .gitignore  Makefile  README.MD  dataflow.yaml
dataflows-inline/openai-callout/: README.md  dataflow.yaml
dataflows-inline/pricing-sim/: dataflow.yaml  new_input.sh  test  (+2 more)
dataflows/unreal-engine-analytics/crates/unreal-tudi-analytics/: Cargo.toml
dataflows/unreal-engine-analytics/crates/unreal-tudi-analytics/src/: lib.rs
docker/: .gitignore  DEVELOPER.MD  Dockerfile  README.MD  docker-compose.yaml  nuke.sh  setup.sh  shutdown.sh  start.sh
ws-proxy/: Cargo.toml
(+210 files in other folders)
